--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     <script src="rules.js"></script>
     <script src="patterns.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js?v=2"></script>
 </body>
 
 </html>
